<resources>
    <string name="app_name">Truecaller Auth</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="otp">OTP</string>
    <string name="continu">Continue</string>
</resources>